--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "styled-components": "^5.0.1"
+    "shortid": "^2.2.15",
+    "styled-components": "^5.0.1",
+    "validator": "^13.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
